--- a/slider/src/styles.scss
+++ b/slider/src/styles.scss
@@ -44,10 +44,13 @@
      }
    }
 
+
+  //Arrow
+
   &__arrow {
     position: absolute;
     display: flex;
-    bottom: 50%;
+    bottom: 179px;
     height: 50px;
     width: 50px;
     cursor: pointer;
@@ -59,49 +62,47 @@
     }
 
     &::before {
-      top: 15px;
-      left: 10px;
+      top: 13px;
+      left: 9px;
       height: 3px;
-      width: 28px;
+      width: 30px;
       transform: rotate(60deg);
     }
 
     &::after {
-      top: 26px;
+      top: 25px;
       left: 22px;
-      height: 28px;
+      height: 27px;
       width: 3px;
       transform: rotate(30deg);
     }
-  }
 
-  &__arrow--left {
-    left: 10%;
-    transform: rotate(180deg);
+      &--left {
+        left: 10%;
+        transform: rotate(180deg);
 
-    &:active {
-      transform: rotate(180deg) translateY(4px);
+        &:active {
+          transform: rotate(180deg) translateY(4px);
+        }
+      }
+
+      &--right {
+        right: 10%;
+
+        &:active {
+          transform: translateY(4px);
+        }
+      }
     }
-  }
 
-  &__arrow--right {
-    right: 10%;
 
-    &:active {
-      transform: translateY(4px);
-    }
-  }
+  &__nav {
+    margin: 15px auto;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
 
-  nav {
-    margin: auto;
-    width: 600px;
-
-    ul {
-      list-style-type: none;
-      display: flex;
-      justify-content: space-between;
-
-      li {
+      &__item {
         width: 150px;
         text-align: center;
         padding: 6px;
@@ -136,9 +137,8 @@
             left: 33px;
             border-bottom-color: #000;
             border-width: 15px;
-         }
+          }
         }
       }
     }
   }
-}
